--- a/src/style.scss
+++ b/src/style.scss
@@ -67,9 +67,9 @@ button[type="submit"] {
   background-color: #0b5239;
 }
 
-// #oldContainer__form {
-//   background-color: #2c7da0;
-// }
+#oldContainer__form {
+  background-color: #0D6244;
+}
 
 .newContainer {
   min-width: 40%;
@@ -80,6 +80,36 @@ button[type="submit"] {
   background-color: #0b5239;
 }
 
-// #newContainer__form {
-//   background-color: #2c7da0;
-// }
+#newContainer__form {
+  background-color: #0D6244;
+}
+
+.searchContainer {
+  min-width: 40%;
+  padding: 2%;
+
+  border: 1px solid black;
+
+  background-color: #0b5239;
+}
+
+#searchContainer__form {
+  background-color: #0D6244;  
+}
+
+.resultContainer {
+  min-width: 70%;
+  padding: 2%;
+
+  border: 1px solid black;
+
+  background-color: #0b5239;
+}
+
+#resultContainer__feed {  
+  min-width: 70%;
+  min-height: 90%;
+
+  // border: 1px solid black;
+  background-color: #0D6244;   
+}
