--- a/src/style.scss
+++ b/src/style.scss
@@ -128,6 +128,10 @@ button[type="button"] {
   background-color: #0D6244;  
 }
 
+.confirmButton {
+  margin-top: 5%;
+}
+
 .resultContainer {
   width: 100%;
 
