--- a/src/style.scss
+++ b/src/style.scss
@@ -53,18 +53,25 @@ input {
   background-color: #242424;
 }
 
-button[type="submit"] {
+// button[type="submit"] {
+//   width: 100%;
+//   border: 0px;
+
+//   background-color: #09422d;
+// }
+
+// button[type="button"] {
+//   width: 100%;
+//   border: 0px;
+
+//   background-color: #09422d;
+// }
+
+button {
   width: 100%;
   border: 0px;
 
-  background-color: #09422d;
-}
-
-button[type="button"] {
-  width: 100%;
-  border: 0px;
-
-  background-color: #09422d;
+  background-color: #09422d;  
 }
 
 .oldContainer {
