major refactor of all asynchronous functions incorporating fail fast principle for improved flow and readability

--- a/src/style.scss
+++ b/src/style.scss
@@ -42,7 +42,7 @@ input {
 
 // containerBackground: #0b5239;
 // container__btn: #073928;
-// bookCard__btn: 
+// bookCard__btn: #09422D;
 
 .container {
   display: flex;
