--- a/src/style.scss
+++ b/src/style.scss
@@ -162,6 +162,16 @@ input {
     background-color: #0b5239;
   }
 
+  &__feed {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+    background-color: #0b5239;
+  }
+
   &__btn {
     width: 100%;
     background-color: #073928;
@@ -170,22 +180,6 @@ input {
     &--submit {
       font-weight: bold;
     }
-  }
-}
-
-.resultContainer {
-  width: 100%;
-  padding: 2%;
-  background-color: #0b5239;
-  border: 1px solid black;
-
-  &__feed {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    background-color: #0b5239;
   }
 }
 
