--- a/src/style.scss
+++ b/src/style.scss
@@ -192,7 +192,7 @@ input {
   // box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   // transition: 0.3s;
 
-  &__image {
+  &__img {
     display: block;    
     width: 100%;
     object-fit: cover;
